fix horizontal scroll

--- a/styles/common_styles.scss
+++ b/styles/common_styles.scss
@@ -3,17 +3,18 @@
 body {
   font-family: 'Exo 2';
   overflow-x: hidden;
-  // position: relative;
 }
 
 html {
   overflow-x: hidden;
+  position: relative;
 }
 
 .app-wrapper {
   overflow-x: hidden;
   width: 100%;
   height: 100%;
+  position: relative;
 }
 
 input[type='number']::-webkit-inner-spin-button,
